--- a/form/assets/css/style.css
+++ b/form/assets/css/style.css
@@ -120,6 +120,10 @@ a:hover {
   display: block;
 }
 
+.sign-in-change-text {
+  display: none;
+}
+
 /*--/ Sections /--*/
 .sect-4 {
   padding: 4rem 0;
